# Scharsch-Bot-Plugin

./: .gitmodules  build.gradle.kts  pom.xml  settings.gradle.kts
core/: Cargo.toml
core/src/: bukkit.rs  lib.rs  logger.rs  util.rs  whitelist.rs
core/src/handlers/: bukkit.rs  chat.rs  commands.rs  mod.rs  players.rs  whitelist.rs
src/main/java/de/scharschbot/plugin/: Events.kt  Plugin.kt
src/main/kotlin/de/scharschbot/plugin/: Events.kt  Plugin.kt
src/main/resources/: config.yml  plugin.yml
