[package]
name = "scharsch-bot-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
scharschbot_core = { path = "./core" }
serde = "1.0.160"
serde_json = "1.0.96"


[lib]
crate-type = ["cdylib"]
